--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
